--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "css-loader": "^0.28.0",
     "express": "^4.15.2",
     "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.2",
+    "html-loader": "^0.4.5",
     "import-glob-loader": "^1.1.0",
     "node-sass": "^4.5.2",
     "postcss-loader": "^1.3.3",
@@ -35,6 +37,7 @@
     "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.16.1",
+    "url-loader": "^0.5.9",
     "webpack": "^2.4.1",
     "webpack-dev-middleware": "^1.10.1"
   },
